# google-cloud-functions-tools

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cors.py
src/google_cloud_functions_tools/: __init__.py  firebase_verify_id.py
tests/: test_cors.py
