[project]
name = "google_cloud_functions_tools"
version = "0.2.1"
authors = [{ name="Abdurrahman Dilmac" }]
description = "A set of utility tools (planned mostly to be decorators) for Google Cloud Functions"
readme = "README.md"
license = { file="LICENCE" }
requires-python = ">=3.7"
dependencies = [
    "firebase_admin",
    "flask",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/cerob/google-cloud-functions-tools"
"Bug Tracker" = "https://github.com/cerob/google-cloud-functions-tools/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
